<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/planetImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/planet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstPageHeading"
        android:text="@string/firstPageHeading"
        android:textSize="24sp"
        android:fontFamily="@font/semibold"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/planetImage"
        android:layout_marginTop="20dp"
        android:textColor="@color/primary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstPageDescription"
        android:text="@string/firstPageDescription"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fontFamily="@font/light"
        android:layout_below="@id/firstPageHeading"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstPageBtnTxt"
        android:backgroundTint="@color/primary"
        android:id="@+id/getStartedBtn"
        android:layout_below="@id/firstPageDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>